Bug 120252 - No page color after selecting and applying one - MacOS
Summary: No page color after selecting and applying one - MacOS
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All macOS (All)
: high major
Assignee: Armin Le Grand (collabora)
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
: 120321 120541 120986 121234 121250 (view as bug list)
Depends on:
Blocks: regressions-buffering-GraphicData
  Show dependency treegraph
 
Reported: 2018-10-01 20:10 UTC by Telesto
Modified: 2018-11-29 16:05 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-10-01 20:10:04 UTC
Description:
No page color after selecting and applying one

Steps to Reproduce:
1. Open Writer
2. Format -> Page -> area tab -> Color 
3. Select one an press OK -> nothing

Actual Results:
Nothing

Expected Results:
A background color


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.2.0.0.alpha0+
Build ID: 9356a2d98b13f45b3d17d181b1ad79d541d7d2f8
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2018-09-30_23:41:16
Locale: nl-NL (nl_NL.UTF-8); Calc: threaded
Comment 1 Dieter 2018-10-03 16:25:23 UTC
Can't confirm with Win10

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 48cfa0b00b22f11ade53aec79b2fdddad253e1bd
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-10-03_02:01:42
Locale: en-US (de_DE); Calc: CL
Comment 2 Alex Thurgood 2018-10-04 07:01:06 UTC
Confirming with 

Version: 6.2.0.0.alpha0+
Build ID: 030181b37d2b7edd7cab20ceb7736e575186f99b
CPU threads: 4; OS: Mac OS X 10.13.6; UI render: default; 
Locale: fr-FR (fr_FR.UTF-8); Calc: threaded
Comment 3 Alex Thurgood 2018-10-04 07:04:11 UTC
Works correctly in 

Version: 6.1.2.1
Build ID: 65905a128db06ba48db947242809d14d3f9a93fe
Threads CPU : 4; OS : Mac OS X 10.13.6; UI Render : par défaut; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group threaded
Comment 4 Xisco Faulí 2018-10-04 17:10:50 UTC
I can't reproduce it in

Version: 6.2.0.0.alpha0+
Build ID: 3d39dad6d93c979ac64244ecb9acfbd8a5fbd6c6
CPU threads: 8; OS: Mac OS X 10.13.6; UI render: default; 
Locale: en-US (en_ES.UTF-8); Calc: threaded
Comment 5 Xisco Faulí 2018-10-04 17:34:37 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=7034311dce663c895577267110baadbec312d491

author	Armin Le Grand <Armin.Le.Grand@cib.de>	2018-09-06 18:15:02 +0200
committer	Armin Le Grand <Armin.Le.Grand@cib.de>	2018-09-13 08:49:35 +0200
commit 7034311dce663c895577267110baadbec312d491 (patch)
tree 8c1d712cbfb1b15dc492e6e724b6b22892914249
parent d92b0efe58b77247e1e5292c1a989baa934df797 (diff)
Support buffering SystemDependent GraphicData (II)

Bisected with: bibisect-mac64-6.2

Adding Cc: to Armin Le Grand
Comment 6 Alex Thurgood 2018-11-07 14:57:38 UTC Comment hidden (obsolete)
Comment 7 Alex Thurgood 2018-11-07 14:58:21 UTC Comment hidden (obsolete)
Comment 8 Armin Le Grand (collabora) 2018-11-08 14:34:44 UTC
Found a potential error in AquaSalGraphics::drawPolyPolygon: I changed to transform the given basegfx::B2DPolyPolygon (using aPolyPolygon), but still rPolyPolygon was used in AddPolygonToPath - an error of course.
Sorry, looks like an overseen change when adapting that code - never safe to not forget something :-(
Will add this to gerrit maybe already fixes most mac stuff. Tha error indeed paints the wrong PolyPolygon on mac when the transformation is used..
Comment 9 Armin Le Grand (collabora) 2018-11-08 14:38:32 UTC
Change on gerrit: https://gerrit.libreoffice.org/#/c/63104/
Comment 10 Xisco Faulí 2018-11-08 15:57:35 UTC
*** Bug 121250 has been marked as a duplicate of this bug. ***
Comment 11 Xisco Faulí 2018-11-08 15:57:48 UTC
*** Bug 120986 has been marked as a duplicate of this bug. ***
Comment 12 Xisco Faulí 2018-11-08 15:58:08 UTC
*** Bug 120541 has been marked as a duplicate of this bug. ***
Comment 13 Xisco Faulí 2018-11-08 15:58:19 UTC
*** Bug 120321 has been marked as a duplicate of this bug. ***
Comment 14 Xisco Faulí 2018-11-08 16:01:09 UTC
*** Bug 121234 has been marked as a duplicate of this bug. ***
Comment 15 Commit Notification 2018-11-08 16:37:49 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/7e0bfbd763fec8640b4c6e34abf86d5bca12466b%5E%21

tdf#120252 use the already transformed PolyPolygon

It will be available in 6.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Xisco Faulí 2018-11-15 14:56:58 UTC
A polite ping to Armin Le Grand:
Is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Otherwise, Could you please explain what's missing?
Thanks
Comment 17 Xisco Faulí 2018-11-29 16:05:21 UTC
Verified in

Version: 6.2.0.0.alpha1+
Build ID: afd4f48d164ca72a024159e0c6b7a49147351f64
CPU threads: 8; OS: Mac OS X 10.13.6; UI render: default; VCL: osx; 
Locale: en-US (en_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Armin, thanks for fixing this!!