tdf#120252 use the already transformed PolyPolygon

Change-Id: I38abc73116720b99364c3de9fa4378c730385dc2
Reviewed-on: https://gerrit.libreoffice.org/63104
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Armin Le Grand <Armin.Le.Grand@cib.de>

Conflicts:
	vcl/quartz/salgdicommon.cxx